updated .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 *.war
 *.ear
 .idea/
+out/
+src/META-INF/
 Gorillas-DB-Redesign.iml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
